--- a/src/app/global.css
+++ b/src/app/global.css
@@ -6,7 +6,7 @@
 
 /*types*/
 body {
-    height: 1700px;
+    height: 1500px;
     min-width: 100%;
     grid-template: 10% 20% 70% / 100%;
     grid-template-areas: 'nav'
@@ -16,6 +16,9 @@ body {
     border: 2px solid green;
 }
 
+html {
+    background-color: black;
+}
 
 /*classes*/
 
@@ -29,17 +32,38 @@ body {
 }
 
 .button {
-    border: 1px solid black;
     width: 70%;
     height: 50px;
     margin: 0px 2px 0px 2px;
-    
+
 }
 
 .button button {
-    border-radius: 5px;
+    border-left: none!important;
+    border-right: none !important;
+    border: 3px solid black;
+    border-radius: 13px;
     padding: 5px;
-    width: 100px
+    width: 100px;
+    cursor: pointer;
+    background-color: orangered;
+    color: black;
+}
+
+.boton {
+    text-decoration: none;
+    color: black;
+    font-size: 20px;
+}
+
+
+.button button:hover {
+    box-shadow: inset -1px -2px 2px 1px black;
+}
+
+.button button:active {
+    position: relative;
+    top: 2px;
 }
 
 .home {
@@ -83,19 +107,36 @@ body {
 .searchInput {
     border-radius: 5px;
     min-width: 80%;
-    height: 80%;
+    height: 100%;
     text-align: center;
     font-size: 20px;
+    border: 3px solid black;
 }   
 
 .submitButton {
-    border: 2px solid blue;
+    border-left: none!important;
+    border-right: none !important;
+    border: 3px solid black;
+    border-radius: 13px;
     height: 43px;
     width: 70px;
     position: relative;
-    left: 2px;
+    left: 6px;
     top: 1px;
-    border-radius: 3px;
+    border-radius: 13px;
+    cursor: pointer;
+    background-color: orangered;
+    color: black;
+    font-size: 18px
+}
+
+.submitButton:hover {
+    box-shadow: inset -1px -2px 2px 1px black;
+}
+
+.submitButton:active {
+    position: relative;
+    top: 2px;
 }
 
 
@@ -104,21 +145,47 @@ body {
     grid-area: reddit;
     border: 2px dotted black;
     display: flex;
-    min-height: 1500px;
     position: relative;
-    bottom: 320px;
+    bottom: 240px;
+    height: 1286px;
+    justify-content: center;
+    
 }
+
+
+
+
 
 .list-container {
     border: 2px solid blue;
-    flex-basis: 100%;
+    width: 70%;
     display: grid;
     grid-template-columns: 100%;
     align-items: stretch;
+    overflow: scroll;
+    border-radius: 10px;
 }
+
+.list-container::-webkit-scrollbar {
+    background-color: lightblue;
+    border-radius: 10px;
+}
+
+.list-container::-webkit-scrollbar-thumb {
+    background-color: lightskyblue;
+    border-radius: 10px;
+}
+
+.list-container::-webkit-scrollbar-button {
+    background-color: black;
+    border-radius: 15px;
+}
+
 
 .heading {
     border: 2px solid purple;
+    height: 240px;
+    background-color: orangered;
 }
 
 .subreddit {
@@ -126,8 +193,28 @@ body {
     display: grid;
     justify-items: center;
     align-items: center;
-    height: 100px;
+    height: 400px;
     min-width: 100%;
+
+}
+
+
+.subreddit div {
+    border: 1px solid black;
+    min-width: 100%;
+}
+
+.subreddit figure {
+    border: 2px solid green;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+}
+
+.subreddit img {
+    width: 300px;
+    height: 270px;
+    border-radius: 5px;
 }
 
 .sub-title {
@@ -136,9 +223,19 @@ body {
     display: flex;
     min-width: 100%;
     min-height: 99%;
-    border-radius: 5px;
-    box-shadow: inset -1px -3px 4px 1px black;
+    border-radius: 15px;
+    background-color: white;
     text-decoration: none;
+}
+
+.sub-title:hover {
+    box-shadow: inset -1px -3px 4px 1px black;
+    background-color: #FAF9F6;
+}
+
+.sub-title:active {
+    position: relative;
+
 }
 
 .try {
@@ -157,44 +254,66 @@ body {
     justify-content: center;
 }
 
+.loading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+    font-size: 22px;
+    
+}
+
 
 /*ids*/
 
+
+/*media queries*/
+
 @media screen and (max-width: 850px) {
     body {
-        height: 2300px;
+        height: 1500px;
 
     }
 
     .realHome {
         position: relative;
-        bottom: 500px;
+        bottom: 240px;
     }
 
     .subreddit {
-        height: 120px;
+        height: 400px;
     }
 }
 
 
 @media screen and (max-width: 643px) {
     body {
-        height: 2500px;
+        height: 1450px;
     }
 
     .realHome {
         position: relative;
-        bottom: 550px;
+        bottom: 270px;
     }
 
     .subreddit {
-        height: 140px;
+        height: 300px;
     }
 
     .sub-title h3 {
         flex-shrink: 3;
         font-size: 20px;
     }
+
+    .subreddit figure {
+        height: 230px;
+    }
+
+    .subreddit img {
+        width: 230px;
+        height: 200px;
+    }
+
 }
 
 @media screen and (max-width: 578px) {
@@ -215,11 +334,38 @@ body {
         position: relative;
         left: 20px;
     }
+
+    .subreddit figure {
+        height: 200px;
+    }
+
+    .subreddit img {
+        width: 200px;
+        height: 180px;
+    }
 }
+
+@media screen and (max-width: 450px) {
+    
+    .subreddit figure {
+        height: 180px;
+    }
+
+    .subreddit img {
+        width: 190px;
+        height: 150px;
+        position: relative;
+        top: 10px;
+    }
+    .interest {
+        position: relative;
+        right: 20px;
+    }
+} 
 
 @media screen and (max-width: 322px) {
     body {
-        height: 3000px;
+        height: 1300px;
     }
 
     .interest button {
@@ -229,15 +375,14 @@ body {
 
     .realHome {
         position: relative;
-        bottom: 700px;
+        bottom: 200px;
+        height: 1100px;
     }
 
-    .subreddit {
-        height: 200px;
-    }
+
 
     .sub-title h3 {
-        font-size: 18px;
+        font-size: 16px;
         overflow: hidden;
     }
 }
