added pointer to back button

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -184,6 +184,7 @@ body {
     background-color: orangered;
     height: 37px;
     width: 60px;
+    cursor: pointer;
 }
 
 .article-container button:hover{
