--- a/src/app/global.css
+++ b/src/app/global.css
@@ -248,7 +248,7 @@ body {
     justify-content: center;
 }
 
-.subreddit img {
+.subreddit Image {
     width: 300px;
     height: 270px;
     border-radius: 5px;
