--- a/src/app/global.css
+++ b/src/app/global.css
@@ -161,14 +161,15 @@ body {
 
 .article-container {
     position: relative;
-    bottom: 130px;
+    bottom: 70px;
     height: 790px;
     overflow: scroll;
+    border-radius: 5px;
+    border: 2px solid black;
 }
 
 .article-container h1 {
     text-align: center;
-    
 }
 
 .article-container h2 {
